- Refactor SQL builder, separated into WithDB trait and DbConn interface; SQL\Schema get ready; prepare VCS - Add web/CSRF related

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -96,6 +96,10 @@ input:focus {
     background-color: forestgreen;
     color: #eeeeee;
 }
+.btn-trending {
+    background-color: darkseagreen;
+    color: white;
+}
 .btn-alert {
     background-color: cornflowerblue;
 }
